package com.ysx.structure.adapter.interface_adapter;

/**
 * 电压接口
 */
public interface IVoltage {

    /**
     * 5V电压
     */
    int output5V();

    /**
     * 220V电压
     */
    int output220V();
}
